split out the different parsers

--- a/Src/NaturalDate/NaturalDate.csproj
+++ b/Src/NaturalDate/NaturalDate.csproj
@@ -44,10 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DateBuilder.cs" />
+    <Compile Include="DateParser.cs" />
+    <Compile Include="IDateParser.cs" />
+    <Compile Include="MonthFirstDateParser.cs" />
+    <Compile Include="YearFirstDateParser.cs" />
+    <Compile Include="DayFirstDateParser.cs" />
     <Compile Include="FriendlyDateParser.cs" />
     <Compile Include="IDateBuilder.cs" />
     <Compile Include="Parser.cs" />
-    <Compile Include="DateParser.cs" />
+    <Compile Include="DateParserX.cs" />
     <Compile Include="CalendarDateParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
