--- a/Src/NaturalDate.Facts/NaturalDate.Facts.csproj
+++ b/Src/NaturalDate.Facts/NaturalDate.Facts.csproj
@@ -57,6 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalendarDateParserFacts.cs" />
+    <Compile Include="MonthFirstDateParserFacts.cs" />
+    <Compile Include="YearFirstDateParserFacts.cs" />
+    <Compile Include="DayFirstDateParserFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
