--- a/Src/NaturalDate/NaturalDate.csproj
+++ b/Src/NaturalDate/NaturalDate.csproj
@@ -47,13 +47,12 @@
     <Compile Include="DateParser.cs" />
     <Compile Include="IDateParser.cs" />
     <Compile Include="MonthFirstDateParser.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="YearFirstDateParser.cs" />
     <Compile Include="DayFirstDateParser.cs" />
     <Compile Include="FriendlyDateParser.cs" />
     <Compile Include="IDateBuilder.cs" />
-    <Compile Include="Parser.cs" />
-    <Compile Include="DateParserX.cs" />
-    <Compile Include="CalendarDateParser.cs" />
+    <Compile Include="TokenParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Text\ITokenEnumeratorCheckpoint.cs" />
