--- a/Src/TestApp/TestApp.csproj
+++ b/Src/TestApp/TestApp.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3949F194-D1BF-41A7-8130-CD2A0F018055}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{C129836D-60C3-4023-BB67-D280A2F23C79}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NaturalDate</RootNamespace>
-    <AssemblyName>NaturalDate</AssemblyName>
+    <RootNamespace>TestApp</RootNamespace>
+    <AssemblyName>TestApp</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,9 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,26 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DateBuilder.cs" />
-    <Compile Include="DateParser.cs" />
-    <Compile Include="IDateParser.cs" />
-    <Compile Include="MonthFirstDateParser.cs" />
-    <Compile Include="Parser.cs" />
-    <Compile Include="YearFirstDateParser.cs" />
-    <Compile Include="DayFirstDateParser.cs" />
-    <Compile Include="FriendlyDateParser.cs" />
-    <Compile Include="IDateBuilder.cs" />
-    <Compile Include="TokenParser.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Text\StringTokenReader.cs" />
-    <Compile Include="Text\Token.cs" />
-    <Compile Include="Text\TokenEnumerator.cs" />
-    <Compile Include="Text\TokenKind.cs" />
-    <Compile Include="Text\TokenReader.cs" />
-    <Compile Include="TokenExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NaturalDate\NaturalDate.csproj">
+      <Project>{3949f194-d1bf-41a7-8130-cd2a0f018055}</Project>
+      <Name>NaturalDate</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
