adding more tests

--- a/Src/NaturalDate.Facts/NaturalDate.Facts.csproj
+++ b/Src/NaturalDate.Facts/NaturalDate.Facts.csproj
@@ -56,6 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NaturalDateParserFacts.cs" />
     <Compile Include="MonthFirstDateParserFacts.cs" />
     <Compile Include="YearFirstDateParserFacts.cs" />
     <Compile Include="DayFirstDateParserFacts.cs" />
