--- a/Src/NaturalDate/NaturalDate.csproj
+++ b/Src/NaturalDate/NaturalDate.csproj
@@ -48,11 +48,10 @@
   <ItemGroup>
     <Compile Include="DateTimeBuilder.cs" />
     <Compile Include="CalendarDateParser.cs" />
-    <Compile Include="IDateBuilder.cs" />
-    <Compile Include="IDateParser.cs" />
-    <Compile Include="ITimeBuilder.cs" />
+    <Compile Include="IDateTimeParser.cs" />
     <Compile Include="MonthFirstDateParser.cs" />
     <Compile Include="Parser.cs" />
+    <Compile Include="TimeParser.cs" />
     <Compile Include="YearFirstDateParser.cs" />
     <Compile Include="DayFirstDateParser.cs" />
     <Compile Include="NaturalDateParser.cs" />
