--- a/Src/NaturalDate/NaturalDate.csproj
+++ b/Src/NaturalDate/NaturalDate.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalendarDateParser2.cs" />
     <Compile Include="DateTimeBuilder.cs" />
     <Compile Include="CalendarDateParser.cs" />
     <Compile Include="IDateTimeParser.cs" />
