--- a/Src/NaturalDate.Facts/NaturalDate.Facts.csproj
+++ b/Src/NaturalDate.Facts/NaturalDate.Facts.csproj
@@ -56,11 +56,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalendarDateParserFacts.cs" />
     <Compile Include="NaturalDateParserFacts.cs" />
-    <Compile Include="MonthFirstDateParserFacts.cs" />
     <Compile Include="TimeParserFacts.cs" />
-    <Compile Include="YearFirstDateParserFacts.cs" />
-    <Compile Include="DayFirstDateParserFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
