switching to use a ParseContext

--- a/Src/NaturalDate/NaturalDate.csproj
+++ b/Src/NaturalDate/NaturalDate.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CalendarDateParser.cs" />
     <Compile Include="DateTimeBuilder.cs" />
     <Compile Include="IDateTimeParser.cs" />
+    <Compile Include="ParseContext.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="NaturalDateParser.cs" />
     <Compile Include="IDateTimeBuilder.cs" />
