--- a/Src/NaturalDate.Facts/NaturalDate.Facts.csproj
+++ b/Src/NaturalDate.Facts/NaturalDate.Facts.csproj
@@ -56,7 +56,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalendarDateParserFacts.cs" />
+    <Compile Include="ParserFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
