--- a/Src/Era/Era.csproj
+++ b/Src/Era/Era.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{3949F194-D1BF-41A7-8130-CD2A0F018055}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NaturalDate</RootNamespace>
-    <AssemblyName>NaturalDate</AssemblyName>
+    <RootNamespace>Era</RootNamespace>
+    <AssemblyName>Era</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
